plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.reboot_course'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 필수 설정
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 롬복 설정
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 인프라 설정
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 테스트 설정
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'

    // 편의성 설정(p6spy, swagger)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

    // validation 설정
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 스키마 버전 관리를 위한 flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // 스프링 시큐리티 설정 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // 세션 관련 설정
    implementation 'org.springframework.session:spring-session-core'


    // Redis 세션 저장소용 (나중에 사용)
    // implementation 'org.springframework.session:spring-session-data-redis'
}

tasks.named('test') {
    useJUnitPlatform()
}